sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  for (i<-1 to getValueCount()){
    for(j<-i to getValueCount()){
      var p=getValue(i)   
 	    if(isSmaller(j,p)){
       p=getValue(j)
     }
  }
    swap(p,i)
}
}